[gd_scene load_steps=23 format=3 uid="uid://by3l0honbb0kd"]

[ext_resource type="Script" path="res://ContraEvolucao/Sprites/hero/Player.gd" id="1_mvqct"]
[ext_resource type="Texture2D" uid="uid://ckkca35xmom2u" path="res://ContraEvolucao/Sprites/hero/player.png" id="2_sgnvu"]

[sub_resource type="RectangleShape2D" id="12"]
size = Vector2(9.5, 7)

[sub_resource type="Animation" id="1"]
resource_name = "AttackDown"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 36, 36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackDownArea/ColissitonAreaAttackDown:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="2"]
resource_name = "AttackTurned"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackTurnedArea/ColissitonAreaAttackTurned:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="3"]
resource_name = "AttackUp"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackUpArea/ColissitonAreaAttackUp:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="4"]
resource_name = "Death"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackDownArea/ColissitonAreaAttackDown:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackTurnedArea/ColissitonAreaAttackTurned:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackUpArea/ColissitonAreaAttackUp:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="6"]
resource_name = "RunDown"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="7"]
resource_name = "RunTurned"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="8"]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="9"]
resource_name = "idleTurned"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="10"]
resource_name = "idleuP"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="11"]
resource_name = "runUp"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q358v"]
_data = {
"AttackDown": SubResource("1"),
"AttackTurned": SubResource("2"),
"AttackUp": SubResource("3"),
"Death": SubResource("4"),
"RESET": SubResource("5"),
"RunDown": SubResource("6"),
"RunTurned": SubResource("7"),
"idle": SubResource("8"),
"idleTurned": SubResource("9"),
"idleuP": SubResource("10"),
"runUp": SubResource("11")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qt2h"]
size = Vector2(19, 11.1667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpxrl"]
size = Vector2(21, 19.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igweu"]
size = Vector2(14.4791, 19)

[sub_resource type="Animation" id="Animation_220nh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0b6uv"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.745098, 0.227451, 0.160784, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24lrb"]
_data = {
"RESET": SubResource("Animation_220nh"),
"hit": SubResource("Animation_0b6uv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ijo5d"]
radius = 25.0799

[node name="Player" type="CharacterBody2D"]
z_index = 1
scale = Vector2(3, 3)
collision_layer = 5
collision_mask = 6
script = ExtResource("1_mvqct")

[node name="Texture" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_sgnvu")
hframes = 6
vframes = 10

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.75, 16)
shape = SubResource("12")

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Texture")
libraries = {
"": SubResource("AnimationLibrary_q358v")
}

[node name="AttackDownArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ColissitonAreaAttackDown" type="CollisionShape2D" parent="AttackDownArea"]
position = Vector2(2.5, 22.4167)
shape = SubResource("RectangleShape2D_8qt2h")
disabled = true

[node name="AttackUpArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ColissitonAreaAttackUp" type="CollisionShape2D" parent="AttackUpArea"]
position = Vector2(0.5, 0.333333)
shape = SubResource("RectangleShape2D_fpxrl")
disabled = true

[node name="AttackTurnedArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ColissitonAreaAttackTurned" type="CollisionShape2D" parent="AttackTurnedArea"]
position = Vector2(13.4271, 11.5)
shape = SubResource("RectangleShape2D_igweu")
disabled = true

[node name="AuxAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_24lrb")
}

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="detectionArea" type="Area2D" parent="."]
light_mask = 16
visibility_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(0.666667, 9.66667)
shape = SubResource("CircleShape2D_ijo5d")

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="body_entered" from="AttackDownArea" to="." method="on_attack_area_body_entered_Down"]
[connection signal="body_entered" from="AttackUpArea" to="." method="on_attack_area_body_entered_Up"]
[connection signal="body_entered" from="AttackTurnedArea" to="." method="on_attack_area_body_entered_Turned"]
[connection signal="body_entered" from="detectionArea" to="." method="on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="on_detection_area_body_exited"]
